[package]
name = "reveal"
version = "0.1.0"
edition = "2021"
description = "Automatically add context to error"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luoshuqi/reveal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reveal_macro = { path = "reveal_macro" }