[package]
name = "reveal_macro"
version = "0.1.0"
edition = "2021"
description = "#[error]"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luoshuqi/reveal"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["visit-mut", "full"] }
